# pymoodleclient

./: .gitignore  README.md  pyproject.toml
pymoodleclient/: __init__.py  client.py  request_params.py
pymoodleclient/endpoints/: __init__.py
pymoodleclient/endpoints/base/: __init__.py  base_endpoint.py  base_response_object.py
pymoodleclient/endpoints/cohort/: __init__.py  cohort_endpoints.py  cohort_responses.py
pymoodleclient/endpoints/course/: __init__.py  course_endpoints.py  course_responses.py
