[tool.poetry]
name = "pymoodleclient"
version = "0.1.0"
description = "Simple and powerful python client for Moodle webservices REST API"
license = "Apache-2.0"
authors = ["vlaszdunov <design@formo.design>"]
readme = "README.md"
homepage = "https://github.com/vlaszdunov/pymoodleclient"
repository = "https://github.com/vlaszdunov/pymoodleclient"

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
