[tool.poetry]
name = "pymoodleclient"
version = "0.2.0b1"
description = "Simple and powerful python client for Moodle webservices REST API"
license = "Apache-2.0"
authors = ["vlaszdunov <design@formo.design>"]
readme = "README.md"
homepage = "https://github.com/vlaszdunov/pymoodleclient"
repository = "https://github.com/vlaszdunov/pymoodleclient"
classifiers=[
    "Topic :: Software Development :: Libraries",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Topic :: Education"
]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.32.3"


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
